--- a/index.html
+++ b/index.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
 
-    <title>Frontend Mentor | NFT preview card component</title>
-  </head>
-  <body>
-    <div class="card-bg">
-      <img
-        class="nft"
-        src="./images/image-equilibrium.jpg"
-        alt="image-equilibrium"
-      />
-      <div class="overlay">
-        <img class="icon-view" src="./images/icon-view.svg" alt="icon-view" />
-      </div>
-      <img class="icon-clock" src="./images/icon-clock.svg" alt="icon-clock" />
-      <img
-        class="icon-eth"
-        src="./images/icon-ethereum.svg"
-        alt="icon-ethereum"
-      />
-      <img class="avatar" src="./images/image-avatar.png" alt="image-avatar" />
-      <span class="nft-name">Equilibrium #3429</span>
-      <p class="description">
-        Our Equilibrium collection promotes balance and calm
-      </p>
-      <span class="nft-value">0.041 ETH</span>
-      <span class="daysleft">3 days left</span>
-      <div class="line"></div>
-      <p class="name">Creation of <a href="#">Jules Wyvern</a></p>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="stylesheet" href="style.css" />
+
+  <title>Frontend Mentor | NFT preview card component</title>
+</head>
+
+<body>
+  <div class="card-bg">
+    <div class="overlay"></div>
+    <img class="nft" src="./images/image-equilibrium.jpg" alt="image-equilibrium" />
+    <img class="view" src="./images/icon-view.svg" alt="icon-view" />
+    <h2 class="name"><a href="#">Equilibrium #3429</a></h2>
+    <p class="description">Our Equilibrium collection promotes balance and calm.</p>
+    <div class="eth-value">
+      <img src="./images/icon-ethereum.svg" alt="eth" />
+      <p>&nbsp; 0.041 ETH</p>
     </div>
-  </body>
+    <div class="time">
+      <img src="./images/icon-clock.svg" alt="clock" />
+      <p>3 days left</p>
+    </div>
+    <div class="line"></div>
+    <div class="footer">
+      <img class="avatar"" src=" ./images/image-avatar.png" alt="avatar" />
+      <p>Creation of <a href="#">Julies Wyvern</a></p>
+    </div>
+  </div>
+
+</body>
+
 </html>
